[tool.poetry]
name = "finalproject-perceva-m25-555"
version = "0.1.0"
description = ""
authors = ["evgeniaVal <perceva221@gmail.com>"]
readme = "README.md"

packages = [
    { include = "valutatrade_hub" },
]

[tool.poetry.scripts]
project = "valutatrade_hub.cli.interface:main"

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.17.0"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
