[tool.poetry]
name = "finalproject-perceva-m25-555"
version = "0.1.0"
description = ""
authors = ["evgeniaVal <perceva221@gmail.com>"]
readme = "README.md"

packages = [
    { include = "valutatrade_hub" },
]

[tool.poetry.scripts]
project = "valutatrade_hub.cli.interface:main"

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.17.0"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.valutatrade]
data_dir = "data"
logs_dir = "logs"
users_file = "users.json"
portfolios_file = "portfolios.json"
rates_file = "rates.json"
rates_ttl_seconds = 3600
default_base_currency = "USD"
log_format = "human"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
